[package]
name = "get_len_base_10_as_usize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
dd_maths_traits = { version = "0.1.3", default_features = true, features = ["std"] }
zero_based_index = "0.1.1"
take-until = "0.1.0"
min_max_traits = "0.1.0"
is_signed_trait = "0.1.0"

[features]
std = []
semver_exempt = []