[package]
name = "get_len_base_10_as_usize"
version = "0.1.6"
authors = ["Dmitrii Demenev <demenev.dmitriy1@gmail.com>"]
edition = "2021"
# https://github.com/foresterre/cargo-msrv
description = "Traits for getting length base 10 as usize, both at run and compile time"
documentation = "https://docs.rs/get_len_base_10_as_usize"
readme = "README.md"
repository = "https://github.com/JohnScience/get_len_base_10_as_usize"
license = "MIT OR Apache-2.0"
# license-file | not needed
keywords = ["maths", "traits", "digits", "number", "length"]
categories = ["mathematics", "no-std"] # https://crates.io/category_slugs
# workspace | not needed
# build | not needed
# links | not needed
# exclude | not needed
autobins = false
autoexamples = false
autotests = false
autobenches = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
dd_maths_traits = { version = "0.1.7" }
zero_based_index = "0.1.1"
take-until = "0.1.0"
min_max_traits = "0.1.0"
is_signed_trait = "0.1.0"
max_len_base_10_as_usize = "0.1.0"
get_len_base_10_as_usize_macros = "0.1.9"

[dev-dependencies]
dd_maths_traits = { version = "0.1.7", features = ["all"] }

[features]
all = ["std", "semver_exempt", "nightly"]

std = ["dd_maths_traits/std"]
semver_exempt = []
nightly = ["const_trait_impl", "adt_const_params", "negative_impls", "decl_macro"]

const_trait_impl = ["get_len_base_10_as_usize_macros/const_trait_impl"]
adt_const_params = ["dd_maths_traits/adt_const_params"]
negative_impls = ["dd_maths_traits/negative_impls"]
decl_macro = ["dd_maths_traits/decl_macro"]

# https://docs.rs/about/metadata

[package.metadata.docs.rs]
# Whether to pass `--all-features` to Cargo (default: false)
all-features = true
